<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.helloandroid.yieron.yieron.ui.activity.MainActivity">

    <Button
        android:id="@+id/my_contentProvider_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_contentProvider"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/my_contentProvider_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_contentProvider"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/my_contentProvider_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_contentProvider"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/my_contentProvider_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_contentProvider"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_Calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calender"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_shareSDK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/my_password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MyPasswordView"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/my_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MyNameView"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/my_canvas_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/My_canvas"
        android:textAllCaps="false" />
</LinearLayout>
